[tool.poetry]
name = "openapi-readme"
version = "0.2.0"
description = "Generate Markdown from an openapi JSON file."
authors = ["Grant Ramsay <grant@gnramsay.com>"]
readme = "README.md"
packages = [{ include = "openapi_readme" }]
license = "MIT"
repository = "https://github.com/seapagan/openapi-readme"
homepage = "https://github.com/seapagan/openapi-readme"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[tool.poetry.urls]
"Pull Requests" = "https://github.com/seapagan/openapi-readme/pulls"
"Bug Tracker" = "https://github.com/seapagan/openapi-readme/issues"

[tool.poetry.scripts]
openapi-readme = "openapi_readme.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = { extras = ["all"], version = "^0.6.1" }
pydantic = "^1.10.2"
single-source = "^0.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
